--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,25 @@
 asgiref==3.7.2
+boto3==1.34.26
+botocore==1.34.26
 certifi==2023.11.17
 charset-normalizer==3.3.2
+dj-database-url==2.1.0
 Django==4.2.9
 django-extensions==3.2.3
+django-heroku==0.3.1
+django-storages==1.14.2
 gunicorn==21.2.0
 idna==3.6
+jmespath==1.0.1
 packaging==23.2
 pillow==10.2.0
+psycopg2==2.9.9
+python-dateutil==2.8.2
 requests==2.31.0
+s3transfer==0.10.0
+six==1.16.0
 sqlparse==0.4.4
 stripe==7.12.0
 typing_extensions==4.9.0
-urllib3==2.1.0
+urllib3==1.26.18
+whitenoise==6.6.0
